--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack React</title>
+    <meta name="description"
+        content="Hi, my name is Nikita. I am engaged in frontend development, this is my portfolio site.">
+    <meta name="keywords" content="Nikita Glukhoedov, Frontend, React, dvun0g, Portfolio">
+    <title>Portfolio</title>
 </head>
+
 <body>
     <div id="root"></div>
 </body>
+
 </html>
